Helm-project/Custom-value-complete/run/dev/kube-prometheus-stack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-promethues-stack-ingress
  namespace: monitoring
  labels:
    name: kube-promethues-stack-ingress
    namespace: monitoring
  # annotations: 
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
  #   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - pshung.tk
      secretName: kube-promethues-stack-secret-tls
  rules:
  - host: pshung.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
      - path: /prom
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana-kube-pr-prometheus
            port: 
              number: 9090
